force-app/main/default/objects/Document__c/fields/Attorney_Client_Privilege__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Client_Privilege__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney-Client Privilege</label>
    <type>Checkbox</type>
</CustomField>