force-app/main/default/objects/Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Police Report</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Medical Bills</fullName>
            </value>
            <value>
                <fullName>Photos — Scene</fullName>
            </value>
            <value>
                <fullName>Photos — Injury</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement</fullName>
            </value>
            <value>
                <fullName>Demand Letter</fullName>
            </value>
            <value>
                <fullName>Insurance Correspondence</fullName>
            </value>
            <value>
                <fullName>Expert Report</fullName>
            </value>
            <value>
                <fullName>Court Filing — Complaint</fullName>
            </value>
            <value>
                <fullName>Court Filing — Answer</fullName>
            </value>
            <value>
                <fullName>Discovery — Interrogatories</fullName>
            </value>
            <value>
                <fullName>Discovery — Deposition</fullName>
            </value>
            <value>
                <fullName>Settlement Agreement</fullName>
            </value>
            <value>
                <fullName>Authorization Form</fullName>
            </value>
            <value>
                <fullName>Lien Documentation</fullName>
            </value>
            <value>
                <fullName>Employment Records</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Letter of Representation</fullName>
            </value>
            <value>
                <fullName>HIPAA Authorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>