force-app/main/default/objects/Document__c/fields/File_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>File_Size_KB__c</fullName>
    <label>File Size (KB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>