force-app/main/default/objects/Document__c/fields/MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>MIME_Type__c</fullName>
    <label>MIME Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>