force-app/main/default/objects/Document__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Reviewed — No Issues</fullName>
            </value>
            <value>
                <fullName>Reviewed — Issues Found</fullName>
            </value>
            <value>
                <fullName>Reviewed — Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>