force-app/main/default/objects/Document__c/fields/S3_Key__c.field-meta.xml
<CustomField>
    <fullName>S3_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>S3 Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>