force-app/main/default/objects/Document__c/fields/Upload_ID__c.field-meta.xml
<CustomField>
    <fullName>Upload_ID__c</fullName>
    <label>Upload ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>