force-app/main/default/objects/Document__c/fields/Work_Product__c.field-meta.xml
<CustomField>
    <fullName>Work_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Product</label>
    <type>Checkbox</type>
</CustomField>